feat: implement authentication

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://docker:docker@localhost:5432/allegre?schema=public"
+JWT_SECRET=b145ed097cba179fa0654fdec6a387a2
